--- a/app/src/main/res/layout/item_country_adapter.xml
+++ b/app/src/main/res/layout/item_country_adapter.xml
@@ -18,10 +18,9 @@
 
         <ImageView
             android:id="@+id/imvFlag"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:background="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
