--- a/app/src/main/res/layout/fragment_detail_country.xml
+++ b/app/src/main/res/layout/fragment_detail_country.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/detailCountry"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".ui.view.DetailCountry">
+    tools:context=".ui.view.DetailCountryFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -138,10 +137,8 @@
                 android:textStyle="bold"
                 tools:text="bogota" />
 
-
         </LinearLayout>
 
     </ScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
